Update index view writing under construction

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </script>
 </head>
 <body>
-  <h2>huro3h pages</h2>
-  <p>testtest</p>
+  <h4>huro3h pages</h4>
+  <p>Under construction...</p>
 
 </body>
 </html>
