--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>huro3h pages</title>
+  <title>huro3h</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,14 +12,14 @@
 <body>
   <div class="container">
     <div class="row">
-      <!-- <div class="header">
-        <h4 class="text-muted">Project name</h3>
-      </div> -->
       <div class="col-xs-12" style="margin-top: 25px;">
-        <h5 class="base_color">huro3h page</h5>
-        <p class="lead base_color">Under construction...</p>
-        <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square fa-2x github_icon"></i></a>
-        <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square fa-2x twitter_icon"></i></a>
+        <h1 class="base_color">huro3h</h1>
+        <p class="lead base_color no_sauna">NO SAUNA, NO LIFE</p>
+        <div style="text-align: center;">
+          <img src="prof_eagle.png" class="prof_picture">
+          <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square fa-2x github_icon"></i></a>
+          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square fa-2x twitter_icon"></i></a>
+        </div>
       </div>
       <!-- <div class="footer">
         <p>&copy; Company 2013</p>
