--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div style="text-align: center;">
           <img src="prof_eagle.png" class="prof_picture">
           <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square fa-2x github_icon"></i></a>
-          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square fa-2x twitter_icon"></i></a>
+          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter fa-2x twitter_icon"></i></a>
         </div>
       </div>
       <!-- <div class="footer">
