Update view, css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div style="text-align: center;">
           <h1 class="base_color">huro3h</h1>
           <img src="prof_eagle.png" class="prof_picture">
-          <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square fa-2x github_icon"></i></a>
-          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter fa-2x twitter_icon"></i></a>
+          <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon"></i></a>
+          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon"></i></a>
         </div>
       </div>
       <!-- <div class="footer">
