--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="col-xs-12" style="margin-top: 25px;">
         <div style="text-align: center;">
           <h1 class="base_color">huro3h</h1>
-          <img src="prof_eagle.png" class="prof_picture">
+          <img src="prof_eagle.png" class="prof_picture" lazyload="on">
           <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon"></i></a>
           <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon"></i></a>
         </div>
