Update index.html about addition to myrun link via pixela web service

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <a class="non_decoration" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
+      <i class="fas fa-running"></i>
+      <span class="running_text"> Running Records</span>
+      <i class="fas fa-running"></i>
+    </a>
+  </div>
   <div class="footer col-xs-12">
     <small>&copy; huro3h 2017</small>
   </div>
