--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <i class="fas fa-running"></i>
     </a>
   </div>
+  <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html"></a>
+  <div class="img-fluid">
+     <img src="https://pixe.la/v1/users/huro3h/graphs/myrun" class="rounded mx-auto d-block" style="max-width: 600px;">
+  </div>
   <div class="footer col-xs-12">
     <small>&copy; huro3h 2017</small>
   </div>
