--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     gtag('config', 'UA-105754438-1');
   </script>
 
+  <!-- Vue.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+
   <title>huro3h</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -26,7 +30,7 @@
     <div class="row">
       <div class="col-xs-12" style="margin-top: 25px;">
         <div style="text-align: center;">
-          <h1 class="base_color">huro3h</h1>
+          <h1 class="base_color" id="title">{{ message }}</h1>
           <img src="prof_eagle.png" class="prof_picture" lazyload="on">
           <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon"></i></a>
           <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon"></i></a>
@@ -61,6 +65,16 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <!-- Vue.js -->
+  <script>
+    const title = new Vue({
+      el: '#title',
+      data: {
+        message: 'huro3h'
+      }
+    })
+  </script>
 </body>
 </html>
 
