--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <div style="text-align: center;">
           <h1 class="base_color" id="title">{{ message }}</h1>
           <img src="prof_eagle.png" class="prof_picture" lazyload="on">
-          <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon"></i></a>
-          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon"></i></a>
+          <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon darkmode-ignore"></i></a>
+          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon darkmode-ignore"></i></a>
         </div>
       </div>
     </div>
   </div>
   <div class="container">
     <a class="non_decoration" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
-      <i class="fas fa-running"></i>
-      <span class="running_text"> Running Records</span>
-      <i class="fas fa-running"></i>
+      <i class="fas fa-running darkmode-ignore"></i>
+      <span class="running_text darkmode-ignore"> Running Records</span>
+      <i class="fas fa-running darkmode-ignore"></i>
     </a>
   </div>
   <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html"></a>
