--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12" style="margin-top: 25px;">
-        <div style="text-align: center;">
+      <div class="col-xs-12 mt-4">
+        <div class="text-center">
           <h1 class="base_color" id="title">{{ message }}</h1>
           <img src="prof_eagle.png" class="prof_picture" lazyload="on">
           <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon darkmode-ignore"></i></a>
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="container">
-    <a class="non_decoration" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
+    <a class="non_decoration mb-2" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
       <i class="fas fa-running darkmode-ignore"></i>
       <span class="running_text darkmode-ignore"> Running Records</span>
       <i class="fas fa-running darkmode-ignore"></i>
