--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="col-xs-12 mt-4">
         <div class="text-center">
           <h1 class="base_color" id="title">{{ message }}</h1>
-          <img src="prof_eagle.png" class="prof_picture" lazyload="on">
+          <img src="profile_image.jpg" class="prof_picture" lazyload="on">
           <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon darkmode-ignore"></i></a>
           <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon darkmode-ignore"></i></a>
         </div>
