--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105754438-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
     gtag('config', 'UA-105754438-1');
   </script>
@@ -18,8 +21,10 @@
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.3.4/lib/darkmode-js.min.js"></script>
 
   <title>huro3h</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -27,62 +32,73 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 mt-4">
-        <div class="text-center">
-          <h1 class="base_color" id="title">{{ message }}</h1>
-          <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80" class="prof_picture" lazyload="on">
-          <a href="https://github.com/huro3h" target="_blank"><i class="fab fa-github-square github_icon darkmode-ignore"></i></a>
-          <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i class="fab fa-twitter-square twitter_icon darkmode-ignore"></i></a>
-        </div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 mt-4">
+      <div class="text-center">
+        <h1 class="base_color" id="title">{{ message }}</h1>
+        <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80" class="prof_picture"
+             lazyload="on">
+        <a href="https://github.com/huro3h" target="_blank"><i
+          class="fab fa-github-square github_icon darkmode-ignore"></i></a>
+        <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i
+          class="fab fa-twitter-square twitter_icon darkmode-ignore"></i></a>
       </div>
     </div>
   </div>
-  <div class="container">
-    <a class="non_decoration mb-2" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
-      <i class="fas fa-running darkmode-ignore"></i>
-      <span class="running_text darkmode-ignore"> Running Records</span>
-      <i class="fas fa-running darkmode-ignore"></i>
-    </a>
-  </div>
-  <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html"></a>
-  <div class="img-fluid">
-     <img src="https://pixe.la/v1/users/huro3h/graphs/myrun" class="rounded mx-auto d-block" style="max-width: 600px;">
-  </div>
-  <div class="footer col-xs-12">
-    <small>&copy; huro3h 2017</small>
-  </div>
-  
-  <script><!-- Twitter universal website tag code -->
-  !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
-  },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
-  a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
-  // Insert Twitter Pixel ID and Standard Event data below
-  twq('init','o10db');
-  twq('track','PageView');
-  </script>
+</div>
+<div class="container">
+  <a class="non_decoration mb-2" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
+    <i class="fas fa-running darkmode-ignore"></i>
+    <span class="running_text darkmode-ignore"> Running Records</span>
+    <i class="fas fa-running darkmode-ignore"></i>
+  </a>
+</div>
+<a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html"></a>
+<div class="img-fluid">
+  <img src="https://pixe.la/v1/users/huro3h/graphs/myrun" class="rounded mx-auto d-block" style="max-width: 600px;">
+</div>
+<div class="footer col-xs-12">
+  <small>&copy; huro3h 2017</small>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script><!-- Twitter universal website tag code -->
+!function (e, t, n, s, u, a) {
+  e.twq || (s = e.twq = function () {
+    s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+  }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
+    a = t.getElementsByTagName(n)[ 0 ], a.parentNode.insertBefore(u, a))
+}(window, document, 'script');
+// Insert Twitter Pixel ID and Standard Event data below
+twq('init', 'o10db');
+twq('track', 'PageView');
+</script>
 
-  <script>
-    // Vue.js
-    const title = new Vue({
-      el: '#title',
-      data: {
-        message: 'huro3h'
-      }
-    })
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
 
-    // Darkmode.js
-    const options = {
-      label: '&#x1F313;'
+<script>
+  // Vue.js
+  const title = new Vue({
+    el: '#title',
+    data: {
+      message: 'huro3h'
     }
-    const darkmode = new Darkmode(options);
-    darkmode.showWidget();
-  </script>
+  })
+
+  // Darkmode.js
+  const options = {
+    label: '&#x1F313;'
+  }
+  const darkmode = new Darkmode(options);
+  darkmode.showWidget();
+</script>
 </body>
 </html>
-
