--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   <title>huro3h</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -37,26 +38,24 @@
     <div class="col-xs-12 mt-4">
       <div class="text-center">
         <h1 class="base_color" id="title">{{ message }}</h1>
-        <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80" class="prof_picture"
+        <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80"
+             class="prof_picture"
              lazyload="on">
-        <a href="https://github.com/huro3h" target="_blank"><i
-          class="fab fa-github-square github_icon darkmode-ignore"></i></a>
-        <a href="https://twitter.com/huro3h" target="_blank" style="margin-left: 5px;"><i
-          class="fab fa-twitter-square twitter_icon darkmode-ignore"></i></a>
+        <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
+          <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
+        </a>
+        <a href="https://twitter.com/huro3h" class="text-decoration-none" target="_blank">
+          <i class="fa-brands fa-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
+        </a>
+        <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
+          <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
+        </a>
       </div>
     </div>
   </div>
 </div>
 <div class="container">
-  <a class="non_decoration mb-2" href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" target="_blank">
-    <i class="fas fa-running darkmode-ignore"></i>
-    <span class="running_text darkmode-ignore"> Running Records</span>
-    <i class="fas fa-running darkmode-ignore"></i>
-  </a>
-</div>
-<a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html"></a>
-<div class="img-fluid">
-  <img src="https://pixe.la/v1/users/huro3h/graphs/myrun" class="rounded mx-auto d-block" style="max-width: 600px;">
+
 </div>
 <div class="footer col-xs-12">
   <small>&copy; huro3h 2017</small>
