--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container mb-4">
   <div class="row">
     <div class="col-xs-12 mt-4">
       <div class="text-center">
@@ -41,21 +41,20 @@
         <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80"
              class="prof_picture"
              lazyload="on">
-        <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
-          <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
-        </a>
-        <a href="https://twitter.com/huro3h" class="text-decoration-none" target="_blank">
-          <i class="fa-brands fa-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
-        </a>
-        <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
-          <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
-        </a>
+        <div class="d-flex justify-content-between">
+          <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
+            <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
+          </a>
+          <a href="https://twitter.com/huro3h" class="text-decoration-none pr-3" target="_blank">
+            <i class="fa-brands fa-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
+          </a>
+          <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
+            <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
+          </a>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div class="container">
-
 </div>
 <div class="footer col-xs-12">
   <small>&copy; huro3h 2017</small>
