--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="col-xs-12 mt-4">
       <div class="text-center">
-        <h1 class="base_color" id="title">{{ message }}</h1>
+        <h1 class="base_color">huro3h</h1>
         <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80"
              class="prof_picture"
              lazyload="on">
@@ -57,7 +57,7 @@
   </div>
 </div>
 <div class="footer col-xs-12">
-  <small>&copy; huro3h 2017</small>
+  <small id="year">&copy; huro3h {{ message }}</small>
 </div>
 
 <script><!-- Twitter universal website tag code -->
@@ -83,11 +83,12 @@ twq('track', 'PageView');
         crossorigin="anonymous"></script>
 
 <script>
-  // Vue.js
-  const title = new Vue({
-    el: '#title',
+  const currentFullDate = new Date();
+  const currentYear = currentFullDate.getFullYear();
+  const year = new Vue({
+    el: '#year',
     data: {
-      message: 'huro3h'
+      message: currentYear,
     }
   })
 
