add damus sns link

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
           </a>
         </div>
+        <div class="text-center">
+          <small>
+            <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy" class="damus_color text-decoration-none" target="_blank">
+              [Damus]
+            </a>
+          </small>
+        </div>
       </div>
     </div>
   </div>
