--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
   <!-- Darkmode.js -->
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.3.4/lib/darkmode-js.min.js"></script>
 
+  <!-- clipboard.js-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
+
   <title>huro3h</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -50,7 +53,7 @@
         </div>
         <div class="text-center">
           <small>
-            <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy" class="damus_color text-decoration-none" target="_blank">
+            <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy" class="damus_color darkmode-ignore text-decoration-none" target="_blank">
               [Damus]
             </a>
           </small>
