--- a/index.html
+++ b/index.html
@@ -68,17 +68,8 @@
   <small id="year">&copy; huro3h {{ message }}</small>
 </div>
 
-<script><!-- Twitter universal website tag code -->
-!function (e, t, n, s, u, a) {
-  e.twq || (s = e.twq = function () {
-    s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
-  }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
-    a = t.getElementsByTagName(n)[ 0 ], a.parentNode.insertBefore(u, a))
-}(window, document, 'script');
-// Insert Twitter Pixel ID and Standard Event data below
-twq('init', 'o10db');
-twq('track', 'PageView');
-</script>
+<!-- Twitter universal website tag code -->
+<script src="assets/twitter_universal_website_tag_code.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
