--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="text-center">
           <small>
             <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
-               class="damus_color darkmode-ignore text-decoration-none"
+               class="nostr_color darkmode-ignore text-decoration-none"
                target="_blank">
-              [Damus]
+              [Nostr]
             </a>
           </small>
         </div>
