--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LK6K4ZCY62"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'G-LK6K4ZCY62');
@@ -32,55 +36,60 @@
 </head>
 
 <body>
-<div class="container mb-4">
-  <div class="row">
-    <div class="col-xs-12 mt-4">
-      <div class="text-center">
-        <h1 class="base_color">huro3h</h1>
-        <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80"
-             class="prof_picture"
-             lazyload="on">
-        <div class="d-flex justify-content-between">
-          <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
-            <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
-          </a>
-          <a href="https://twitter.com/huro3h" class="text-decoration-none pr-3" target="_blank">
-            <i class="fa-brands fa-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
-          </a>
-          <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
-            <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
-          </a>
-        </div>
+<div class="container mb-3">
+  <div class="main_contents mb-2">
+    <div class="row">
+      <div class="col-xs-12 mt-4">
         <div class="text-center">
-          <small>
-            <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
-               class="nostr_color darkmode-ignore text-decoration-none"
-               target="_blank">
-              [Nostr]
+          <h1 class="mb-3">huro3h</h1>
+          <img src="https://s.gravatar.com/avatar/060ee673b2ac887126640bcca165cfdf?s=80"
+               class="prof_picture"
+               lazyload="on">
+          <div class="d-flex justify-content-between">
+            <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
+              <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
             </a>
-          </small>
+            <a href="https://twitter.com/huro3h" class="text-decoration-none pr-3" target="_blank">
+              <i class="fa-brands fa-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
+            </a>
+            <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
+              <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+  <div class="text-center">
+    <small>
+      <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
+         class="nostr_link darkmode-ignore text-decoration-none"
+         target="_blank">
+        [Nostr]
+      </a>
+    </small><br>
+    <small>
+      npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy
+    </small>
   </div>
 </div>
 <div class="footer col-xs-12">
   <small id="year">&copy; huro3h {{ message }}</small>
 </div>
 
-<!-- Twitter universal website tag code -->
-<script src="assets/twitter_universal_website_tag_code.js"></script>
+  <!-- Twitter universal website tag code -->
+  <script src="assets/twitter_universal_website_tag_code.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
-        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
-        crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+          crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+          integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+          integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+          crossorigin="anonymous"></script>
 
-<script src="assets/index.js"></script>
+  <script src="assets/index.js"></script>
 </body>
 </html>
