--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
+
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
