--- a/index.html
+++ b/index.html
@@ -64,15 +64,24 @@
     </div>
   </div>
   <div class="text-center">
-    <small>
+    <small class="d-inline-block">
       <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
          class="nostr_link darkmode-ignore text-decoration-none"
          target="_blank">
-        [Nostr]
+        Nostr
       </a>
     </small><br>
     <small>
+      <span
+        class="nostr_pub_key"
+        data-clipboard-text="npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
+      >
       npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy
+      </span>
+      <i
+        class="fa-regular fa-paste nostr_pub_key"
+        data-clipboard-text="npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
+      ></i>
     </small>
   </div>
 </div>
