--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     </small><br>
     <small>
       <span
-        class="nostr_pub_key"
+        class="nostr_pub_key darkmode-ignore"
         data-clipboard-text="npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
       >
       npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy
       </span>
       <i
-        class="fa-regular fa-paste nostr_pub_key"
+        class="fa-regular fa-paste nostr_pub_key darkmode-ignore"
         data-clipboard-text="npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
       ></i>
     </small>
