--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
   <div class="text-center">
     <small class="d-inline-block">
-      <a href="https://damus.io/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
+      <a href="https://iris.to/#/profile/npub1ww9tnff7pwq059d3j3gg8mfv4xy7r7dtnk22tku978cnw0jl2wysyvh8gy"
          class="nostr_link darkmode-ignore text-decoration-none"
          target="_blank">
         Nostr
