--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
             </a>
             <a href="https://twitter.com/huro3h" class="text-decoration-none pr-3" target="_blank">
-              <i class="fa-brands fa-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
+              <i class="fa-brands fa-x-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
             </a>
             <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
               <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
