--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <a href="https://twitter.com/huro3h" class="text-decoration-none pr-3" target="_blank">
               <i class="fa-brands fa-x-twitter twitter_icon darkmode-ignore text-decoration-none"></i>
             </a>
-            <a href="https://pixe.la/v1/users/huro3h/graphs/myrun.html" class="text-decoration-none" target="_blank">
-              <i class="fa-solid fa-person-running darkmode-ignore running_icon"></i>
+            <a href="https://bsky.app/profile/huro3h.com" class="text-decoration-none" target="_blank">
+              <i class="fa-solid fa-feather-pointed darkmode-ignore running_icon"></i>
             </a>
           </div>
         </div>
