--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
               <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
             </a>
-            <a href="https://twitter.com/huro3h" class="text-decoration-none pr-3" target="_blank">
+            <a href="https://x.com/huro3h" class="text-decoration-none pr-3" target="_blank">
               <i class="fa-solid fa-crow twitter_icon darkmode-ignore text-decoration-none"></i>
             </a>
             <a href="https://bsky.app/profile/huro3h.com" class="text-decoration-none" target="_blank">
