--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
             </a>
             <a href="https://x.com/huro3h" class="text-decoration-none pr-3" target="_blank">
-              <i class="fa-solid fa-crow twitter_icon darkmode-ignore text-decoration-none"></i>
+              <i class="fa-brands fa-x-twitter github_icon darkmode-ignore text-decoration-none"></i>
             </a>
             <a href="https://bsky.app/profile/huro3h.com" class="text-decoration-none" target="_blank">
-              <i class="fa-solid fa-feather-pointed darkmode-ignore running_icon"></i>
+              <i class="fa-solid fa-feather-pointed github_icon darkmode-ignore"></i>
             </a>
           </div>
         </div>
