--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <i class="fa-brands fa-x-twitter github_icon darkmode-ignore text-decoration-none"></i>
             </a>
             <a href="https://bsky.app/profile/huro3h.com" class="text-decoration-none" target="_blank">
-              <i class="fa-solid fa-feather-pointed github_icon darkmode-ignore"></i>
+              <i class="fa-brands fa-bluesky github_icon darkmode-ignore"></i>
             </a>
           </div>
         </div>
