--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@
                lazyload="on">
           <div class="d-flex justify-content-between">
             <a href="https://github.com/huro3h" class="text-decoration-none" target="_blank">
-              <i class="fa-brands fa-github github_icon darkmode-ignore"></i>
+              <i class="fa-brands fa-github mono_icon darkmode-ignore"></i>
             </a>
             <a href="https://x.com/huro3h" class="text-decoration-none pr-3" target="_blank">
-              <i class="fa-brands fa-x-twitter github_icon darkmode-ignore text-decoration-none"></i>
+              <i class="fa-brands fa-x-twitter mono_icon darkmode-ignore text-decoration-none"></i>
             </a>
             <a href="https://bsky.app/profile/huro3h.com" class="text-decoration-none" target="_blank">
-              <i class="fa-brands fa-bluesky github_icon darkmode-ignore"></i>
+              <i class="fa-brands fa-bluesky mono_icon darkmode-ignore"></i>
+            </a>
+          </div>
+          <div class="d-flex justify-content-center">
+            <a href="https://hackmd.io/@huro3h/memo_top" class="text-decoration-none pr-3" target="_blank">
+              <i class="fa-regular fa-note-sticky mono_icon darkmode-ignore text-decoration-none"></i>
             </a>
           </div>
         </div>
